@@ -14,49 +14,52 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Tag(name = "Imagem Service", description = "APIs relacionadas a operações de imagens")
 public class ImagemService {
 
-    @Autowired
-    private AlbumRepository albumRepository;
+    private final AlbumRepository albumRepository;
+    private final ImagemRepository imagemRepository;
+    private final ImagemMapper imagemMapper = new ImagemMapper();
 
     @Autowired
-    private ImagemRepository imagemRepository;
-
-    ImagemMapper imagemMapper = new ImagemMapper();
+    public ImagemService(AlbumRepository albumRepository, ImagemRepository imagemRepository) {
+        this.albumRepository = albumRepository;
+        this.imagemRepository = imagemRepository;
+    }
 
     @Operation(summary = "Cadastrar uma nova imagem em um álbum")
-    public RetornoImagemDTO cadastrar(Long idAlbum, Imagem novaImagem){
-        Optional<Album> albumOptional = albumRepository.findById(idAlbum);
-        albumOptional.orElseThrow(() -> new EntidadeNaoEncontradaException("Album não encontrado"));
-
-        novaImagem.setIdAlbum(albumOptional.get());
+    public RetornoImagemDTO cadastrar(Long idAlbum, Imagem novaImagem) {
+        Album album = getAlbum(idAlbum);
+        novaImagem.setIdAlbum(album);
         return imagemMapper.toRetornoImagemDTO(imagemRepository.save(novaImagem));
     }
 
     @Operation(summary = "Buscar uma imagem por ID")
-    public Imagem buscarPorId(Long idImagem){
-        Optional<Imagem> imagemOptional = imagemRepository.findById(idImagem);
-        Imagem imagem = imagemOptional.orElseThrow(() -> new EntidadeNaoEncontradaException("Imagem não encontrada"));
-        return imagem;
+    public Imagem buscarPorId(Long idImagem) {
+        return imagemRepository.findById(idImagem)
+                .orElseThrow(() -> new EntidadeNaoEncontradaException("Imagem não encontrada"));
     }
 
     @Operation(summary = "Deletar uma imagem por ID")
-    public void deletar(Long idImagem){
+    public void deletar(Long idImagem) {
         buscarPorId(idImagem);
         imagemRepository.deleteById(idImagem);
     }
 
     @Operation(summary = "Listar todas as imagens")
-    public List<RetornoImagemDTO> listar(){
-        List<Imagem> imagems = imagemRepository.findAll();
-        List<RetornoImagemDTO> imagemDTO = imagems.stream()
+    public List<RetornoImagemDTO> listar() {
+        List<Imagem> imagens = imagemRepository.findAll();
+        return imagens.stream()
                 .map(imagem -> imagemMapper.toRetornoImagemDTO(imagem))
-                .toList();
+                .collect(Collectors.toList());
+    }
 
-        return imagemDTO;
+    private Album getAlbum(Long idAlbum) {
+        return albumRepository.findById(idAlbum)
+                .orElseThrow(() -> new EntidadeNaoEncontradaException("Album não encontrado"));
     }
 
 }
